--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,47 +1,46 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
-  {% include head.html %}
-
-  <body>
-
-    {% include sidebar.html %}
-
-    <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
-         content to avoid any CSS collisions with our real content. -->
-    <div class="wrap">
-      <div class="masthead">
-        <div class="container">
-          <h3 class="masthead-title">
-            <a href="/" title="Home">{{ site.title }}</a>
-            <small>{{ site.tagline }}</small>
-          </h3>
+    {% include head.html %}
+    <body>
+        {% include sidebar.html %}
+        <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
+                 content to avoid any CSS collisions with our real content. -->
+        <div class="wrap">
+            <div class="masthead">
+                <div class="container">
+                    <h3 class="masthead-title">
+                        <a href="/" title="Home">{{ site.title }}</a>
+                        <small>{{ site.tagline }}</small>
+                    </h3>
+                </div>
+            </div>
+            <div class="container content">
+                {{ content }}
+            </div>
         </div>
-      </div>
+        <label for="sidebar-checkbox" class="sidebar-toggle"></label>
+        <script>
+            if (window.location.host.indexOf('.github.io') > -1
+             && window.location.protocol != 'https:') {
+                window.location.protocol = 'https';
+            }
+        </script>
+        <script>
+            (function(document) {
+                var toggle = document.querySelector('.sidebar-toggle');
+                var sidebar = document.querySelector('#sidebar');
+                var checkbox = document.querySelector('#sidebar-checkbox');
 
-      <div class="container content">
-        {{ content }}
-      </div>
-    </div>
+                document.addEventListener('click', function(e) {
+                    var target = e.target;
 
-    <label for="sidebar-checkbox" class="sidebar-toggle"></label>
+                    if(!checkbox.checked ||
+                         sidebar.contains(target) ||
+                         (target === checkbox || target === toggle)) return;
 
-    <script>
-      (function(document) {
-        var toggle = document.querySelector('.sidebar-toggle');
-        var sidebar = document.querySelector('#sidebar');
-        var checkbox = document.querySelector('#sidebar-checkbox');
-
-        document.addEventListener('click', function(e) {
-          var target = e.target;
-
-          if(!checkbox.checked ||
-             sidebar.contains(target) ||
-             (target === checkbox || target === toggle)) return;
-
-          checkbox.checked = false;
-        }, false);
-      })(document);
-    </script>
-  </body>
+                    checkbox.checked = false;
+                }, false);
+            })(document);
+        </script>
+    </body>
 </html>
