--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,14 +1,14 @@
 ---
 layout: default
 ---
-{% assign author = site.authors[page.author] %}
+{% assign author = site.data.authors[page.author] %}
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
   <p>
     <small>
       <span class="post-date">{{ page.date | date_to_string }}</span>
       &middot;
-      <a href="{{ author.web }}" target="_blank">{{ author.display_name }}</a>
+      <a href="{{ author.web }}" target="_blank">{{ author.name }}</a>
     </small>
   </p>
   {{ content }}
