--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,6 +26,6 @@
     {% endfor %}
 
     <a class="sidebar-nav-item" href="{{ site.github }}" target="_blank">GitHub</a>
-    <a class="sidebar-nav-item" href="{{ site.clippings }}" target="_blank">Clippings.com</a>
+    <a class="sidebar-nav-item" href="{{ site.website }}" target="_blank">{{ site.websiteName }}</a>
   </nav>
 </div>
